--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.28.0"
+    "fastify": "^4.28.0",
+    "nodemon": "^3.1.4",
+    "uuid": "^10.0.0"
   }
 }
