--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "interview challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo test not specified"
   },
   "author": "",
